prodMetadata/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>npsp__Closed_Lost_Reason__c</fullName>
        <description>Notes on why the donation ask was not successful.</description>
        <inlineHelpText>Notes on why the donation ask was not successful.</inlineHelpText>
        <label>Closed Lost Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Fair_Market_Value__c</fullName>
        <description>The Fair Market Value of an In-Kind gift.</description>
        <inlineHelpText>The Fair Market Value of an In-Kind gift.</inlineHelpText>
        <label>Fair Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Gift_Strategy__c</fullName>
        <description>Categorizes the type of ask for this Opportunity, for example, New Donor.</description>
        <inlineHelpText>Categorizes the type of ask for this opportunity.</inlineHelpText>
        <label>Gift Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Donor</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Grant_Contract_Date__c</fullName>
        <description>The date of the Grant&apos;s inception, according to the document or contract sent by the grantmaking organization.</description>
        <inlineHelpText>The date of the grant&apos;s inception, according to the document or contract sent by the grant-making organization.</inlineHelpText>
        <label>Grant Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Grant_Contract_Number__c</fullName>
        <description>Use this to track unique numbers sometimes assigned by grantmaking organizations.</description>
        <inlineHelpText>Tracks unique numbers sometimes assigned by grant-making organizations.</inlineHelpText>
        <label>Grant Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Grant_Period_End_Date__c</fullName>
        <description>The date on which the period of the grant ends.</description>
        <label>Grant Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Grant_Period_Start_Date__c</fullName>
        <description>The date on which the period of the grant begins.</description>
        <label>Grant Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Grant_Program_Area_s__c</fullName>
        <description>Use this to describe the funding areas for the Grant or Donation. For example, the names of the programs the Grant or Donation is designated for.</description>
        <inlineHelpText>Describes the funding areas for the grant. You can enter anything you want here. For example, you could enter the name of the program the grant applies to.</inlineHelpText>
        <label>Program Areas</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Grant_Requirements_Website__c</fullName>
        <description>A URL that points to the grant requirements on the grantmaker&apos;s website.</description>
        <inlineHelpText>A URL that points to the grant requirements on the grant-maker&apos;s website.</inlineHelpText>
        <label>Grant Requirements Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>npsp__Honoree_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Contact record of the honoree for this Donation.</description>
        <inlineHelpText>The existing Contact record of the honoree for this donation.</inlineHelpText>
        <label>Honoree Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Honoree Contact)</relationshipLabel>
        <relationshipName>Honoree_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Honoree_Name__c</fullName>
        <description>The honoree name as provided by the donor. If this field is left blank, and the Honoree Contact field contains a value, NPSP automatically populates this field with that value.</description>
        <inlineHelpText>The honoree name as provided by the donor. If this field is left blank, and the Honoree Contact field contains a value, Salesforce automatically populates this field with that value.</inlineHelpText>
        <label>Honoree Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__In_Kind_Description__c</fullName>
        <description>Holds any rich text description of the In-Kind Gift, including pictures.</description>
        <inlineHelpText>Holds any rich text description of the In-Kind Gift, including pictures.</inlineHelpText>
        <label>In-Kind Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>npsp__In_Kind_Donor_Declared_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the donor provided the Fair Market Value for this In-Kind Gift.</description>
        <inlineHelpText>Checked if the donor provided the Fair Market Value for this In-Kind gift.</inlineHelpText>
        <label>In-Kind Donor Declared Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__In_Kind_Type__c</fullName>
        <description>The type of In-Kind Gift, for example, Goods or Services.</description>
        <inlineHelpText>The type of In-Kind gift.</inlineHelpText>
        <label>In-Kind Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Goods</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Is_Grant_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Grant is a renewal of a previous Grant.</description>
        <inlineHelpText>If selected, indicates that the grant is a renewal of a previous grant.</inlineHelpText>
        <label>Is Grant Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Account record of the company that will match this Donation.</description>
        <inlineHelpText>The account of the company who will match this gift.</inlineHelpText>
        <label>Matching Gift Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Matched Gifts</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Employer__c</fullName>
        <description>The name of the company that will match this Donation.</description>
        <inlineHelpText>The name of the company who will match this gift.</inlineHelpText>
        <label>Matching Gift Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Status__c</fullName>
        <description>The status of the Matching Gift for this Donation, for example, Submitted or Received.</description>
        <inlineHelpText>The status of this gift being matched.</inlineHelpText>
        <label>Matching Gift Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Potential</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Opportunity record for the Matching Gift for this Donation.</description>
        <inlineHelpText>The employer&apos;s matching gift for this employee&apos;s gift.</inlineHelpText>
        <label>Matching Gift</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Matched Gifts</relationshipLabel>
        <relationshipName>MatchedGifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Next_Grant_Deadline_Due_Date__c</fullName>
        <description>The due date for this Opportunity&apos;s next Deliverable (read only).</description>
        <inlineHelpText>The NPSP updates this field automatically based on the next Grant Deadline record.</inlineHelpText>
        <label>Next Deliverable Date</label>
        <summarizedField>npsp__Grant_Deadline__c.npsp__Grant_Deadline_Due_Date__c</summarizedField>
        <summaryFilterItems>
            <field>npsp__Grant_Deadline__c.npsp__Grant_Deadline_Due_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>npsp__Grant_Deadline__c.npsp__Grant_Deliverable_Close_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>npsp__Grant_Deadline__c.npsp__Opportunity__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npsp__Notification_Message__c</fullName>
        <description>A personalized message for the notification recipient.</description>
        <inlineHelpText>A personalized message for the notification recipient.</inlineHelpText>
        <label>Notification Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Notification_Preference__c</fullName>
        <description>Indicates how the notification recipient should be notified, for example, by email or phone.</description>
        <inlineHelpText>How the notification recipient should be notified.</inlineHelpText>
        <label>Notification Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Postal Mail</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Do Not Notify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Notification_Recipient_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Contact record of the person who should be notified about this Donation.</description>
        <inlineHelpText>The existing Contact record of the person to be notified for this donation.</inlineHelpText>
        <label>Notification Recipient Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Notification Recipient)</relationshipLabel>
        <relationshipName>Notification_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Notification_Recipient_Information__c</fullName>
        <description>Enter any contact information such as address, phone, or email that the donor provided for the notification recipient.</description>
        <inlineHelpText>The contact information (as provided by the donor) for the notification recipient.</inlineHelpText>
        <label>Notification Recipient Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Notification_Recipient_Name__c</fullName>
        <description>The name that the donor provided of the person you should notify about this Donation. If this field is left blank and the Notification Recipient Contact field contains a value, NPSP automatically populates this field with that value.</description>
        <inlineHelpText>The name (as provided by the donor) of the person who should be notified about this gift. If this field is left blank and the Notification Recipient Contact field contains a value, Salesforce automatically populates this field with that value.</inlineHelpText>
        <label>Notification Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Previous_Grant_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this Grant is a renewal of a previous Grant, use this field to relate this record to the previous Grant.</description>
        <inlineHelpText>If this grant is a renewal of a previous grant, use this field to relate this record to the previous one.</inlineHelpText>
        <label>Previous Grant/Gift Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Grants/Gifts</relationshipLabel>
        <relationshipName>Previous_Grant_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Primary_Contact_Campaign_Member_Status__c</fullName>
        <description>The status NPSP uses when it creates a Campaign Member for this Opportunity&apos;s Primary Contact and Primary Campaign Source. Leave blank to default to a responded status for Closed/Won Opportunities, and a non-responded status for other Opportunities.</description>
        <inlineHelpText>The status to use when creating a campaign member for this opportunity&apos;s primary contact and primary campaign source. Leave blank to default to an responded status for closed/won opportunities, and a non-responded status for other opportunities.</inlineHelpText>
        <label>Primary Contact Campaign Member Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Primary Contact for this Opportunity. If this is an individual Donation, NPSP attributes the Donation to the Primary Contact. If this is an organizational Donation, NPSP attributes a soft credit to the Primary Contact.</description>
        <inlineHelpText>The primary contact for this opportunity. The primary contact role is kept in sync with this field. For individual donations, this denotes attribution for this opportunity.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Qualified_Date__c</fullName>
        <description>The date your organization identified this donor as qualifying for this Donation.</description>
        <inlineHelpText>The date this donor was identified as qualifying for this donation.</inlineHelpText>
        <label>Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Recurring_Donation_Installment_Name__c</fullName>
        <description>The installment name for inclusion in Opportunity naming. Shows the installment number in parentheses for open ended Recurring Donations, or the installment number out of the total for Recurring Donations with a set number of installments.</description>
        <formula>IF(
ISBLANK(npe03__Recurring_Donation__c),
&apos;&apos;,
  IF(
    OR(ISPICKVAL(npe03__Recurring_Donation__r.npe03__Open_Ended_Status__c, &apos;Open&apos;),ISPICKVAL(npe03__Recurring_Donation__r.npe03__Open_Ended_Status__c, &apos;Closed&apos;),ISBLANK(npe03__Recurring_Donation__r.npe03__Installments__c)),
    &apos;(&apos;&amp;TEXT(npsp__Recurring_Donation_Installment_Number__c)&amp;&apos;)&apos;,
    &apos;(&apos;&amp;TEXT(npsp__Recurring_Donation_Installment_Number__c)&amp;&apos; &apos;&amp;$Label.npsp__oppinstallmentsof&amp;&apos; &apos;&amp;TEXT(npe03__Recurring_Donation__r.npe03__Installments__c)&amp;&apos;)&apos;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Installment name for inclusion in Opportunity Naming. Shows the installment number in parenthesis for open ended recurring donations, or the installment number out of the total for recurring donations with a set number of installments.</inlineHelpText>
        <label>Recurring Donation Installment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Recurring_Donation_Installment_Number__c</fullName>
        <description>The installment number of this Opportunity&apos;s Recurring Donation schedule.</description>
        <inlineHelpText>The installment number of this opportunity&apos;s recurring donation schedule.</inlineHelpText>
        <label>Recurring Donation Installment Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Requested_Amount__c</fullName>
        <description>The amount you are requesting. This number might be different from the final award amount.</description>
        <inlineHelpText>The amount you are requesting. This number might be different from the final award amount.</inlineHelpText>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Tribute_Type__c</fullName>
        <description>Indicates whether the Donation is in honor or in memory of an individual.</description>
        <inlineHelpText>Indicates whether the gift is in honor or memory of an individual.</inlineHelpText>
        <label>Tribute Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Honor</fullName>
                </value>
                <value>
                    <fullName>Memorial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>percET__Engagement_Jump_From_Level__c</fullName>
        <inlineHelpText>Set automatically by StepUp.</inlineHelpText>
        <label>Engagement Jump From Level</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percET__Engagement_Jump_To_Level__c</fullName>
        <inlineHelpText>Set automatically by StepUp.</inlineHelpText>
        <label>Engagement Jump To Level</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percET__Engagement_Jump_Type__c</fullName>
        <description>Breakthrough = First time this high up the pyramid
Rebound = Was at this level or higher in the past, but had since dropped to a lower level</description>
        <label>Engagement Jump Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Breakthrough</fullName>
                </value>
                <value>
                    <fullName>Rebound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>percET__Is_Engagement_Jump__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by batch process</description>
        <inlineHelpText>Was participation in this campaign responsible for this contact moving up at least 1 engagement level? Set automatically by StepUp.</inlineHelpText>
        <label>Engagement Jump</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>percET__Is_New_Supporter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by batch process</description>
        <inlineHelpText>Was participation in this campaign responsible for giving the contact their very first engagement level above 0? Set automatically by StepUp.</inlineHelpText>
        <label>New Supporter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>stayclassy__Anonymous_Donor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anonymous Donor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>stayclassy__Applied_FOT_Percent__c</fullName>
        <description>The Fee On Top percentage applied to each Classy Transaction</description>
        <inlineHelpText>The Fee On Top percentage applied to each Classy Transaction</inlineHelpText>
        <label>Applied FOT Percent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Billing_First_Name__c</fullName>
        <description>First Name of the person associated with billing info</description>
        <label>Billing First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__Billing_Last_Name__c</fullName>
        <description>Last Name of the person associated with billing info</description>
        <label>Billing Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__Browser_Info__c</fullName>
        <description>Contains information indicating the browser type/version and operating system used by the donor to make a purchase</description>
        <label>Browser Info</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities (Campaign)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>stayclassy__Cash_Ledger_ID__c</fullName>
        <description>The Classy ID of the Cash Ledger related record</description>
        <label>Cash Ledger ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Cash_Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For matched transactions, this is a reference to the related cash ledger payment record</description>
        <label>Cash Ledger</label>
        <referenceTo>stayclassy__Cash_Ledger__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>stayclassy__Charged_Classy_Fees_Amount__c</fullName>
        <label>Charged Classy Fees Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Charged_Currency_Code__c</fullName>
        <label>Charged Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__Charged_Fees_Amount__c</fullName>
        <label>Charged Fees Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Charged_Processor_Fees_Amount__c</fullName>
        <label>Charged Processor Fees Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Charged_Total_Gross_Amount__c</fullName>
        <label>Charged Total Gross Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_API_Request_Status2__c</fullName>
        <formula>TEXT(stayclassy__Classy_API_Request__r.stayclassy__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classy API Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_API_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent API request that updates this Campaign</description>
        <label>Classy API Request</label>
        <referenceTo>stayclassy__Classy_API_Request__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Business_ID__c</fullName>
        <description>Used to identify an organization or company in Classy.</description>
        <label>Classy Business ID</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Campaign_ID__c</fullName>
        <label>Classy Campaign ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Designation_ID__c</fullName>
        <label>Classy Designation ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Fundraising_Page_ID__c</fullName>
        <label>Classy Fundraising Page ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Fundraising_Team_ID__c</fullName>
        <label>Classy Fundraising Team ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Member_Email__c</fullName>
        <label>Classy Member Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Member_ID__c</fullName>
        <label>Classy Member ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Member_Phone__c</fullName>
        <label>Classy Member Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Order_Total__c</fullName>
        <description>The total amount for a Classy order or transaction, including donations and products (tickets/registrations).</description>
        <label>Order Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Pay_Payment_Token_ID__c</fullName>
        <label>Classy Pay Payment Token ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Pay_Recurring_ID__c</fullName>
        <description>The recurring ID used for Classy Pay.  Please note this is a different ID from the Classy Recurring Donor ID.</description>
        <label>Classy Pay Recurring ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Pay_Transaction_ID__c</fullName>
        <description>The Transaction ID used to reference the transaction in Classy Pay</description>
        <externalId>true</externalId>
        <label>Classy Pay Transaction ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Processor_Object_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ID from the payment processor that performed the transaction.</description>
        <label>Classy Processor Object ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Recurring_Donor_ID__c</fullName>
        <label>Classy Recurring Donor ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Company_Name__c</fullName>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__Credit_Card_Expiration_Date__c</fullName>
        <label>Credit Card Expiration Date</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__Credit_Card_Last_Four_Digits__c</fullName>
        <label>Credit Card Last Four Digits</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__Credit_Card_Type__c</fullName>
        <description>Type of credit card used for a donation (Visa, MasterCard, Amex, etc.)</description>
        <label>Credit Card Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__Currency_Code__c</fullName>
        <description>Displays the type of currency utilized by a donor when making a donation.</description>
        <label>Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__Dedication_Ecard_ID__c</fullName>
        <description>Classy ID of the dedication Ecard record</description>
        <inlineHelpText>Classy ID of the dedication Ecard record</inlineHelpText>
        <label>Dedication Ecard ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Dedication_Ecard_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dedication eCard Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>stayclassy__Dedication_Email_Body__c</fullName>
        <label>Dedication Body</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>stayclassy__Dedication_First_Name__c</fullName>
        <label>Dedication First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__Dedication_ID__c</fullName>
        <description>The Classy ID for the Dedication object.</description>
        <inlineHelpText>The Classy ID for the Dedication object.</inlineHelpText>
        <label>Classy Dedication ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Dedication_Last_Name__c</fullName>
        <label>Dedication Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__Device_Type__c</fullName>
        <formula>IF (
!ISBLANK(stayclassy__Browser_Info__c), (
  IF (
    (CONTAINS(LOWER(stayclassy__Browser_Info__c), &quot;android&quot;)) ||
    (CONTAINS(LOWER(stayclassy__Browser_Info__c), &quot;iphone&quot;)) ||
    (CONTAINS(LOWER(stayclassy__Browser_Info__c), &quot;ipad&quot;)) ||
    (CONTAINS(LOWER(stayclassy__Browser_Info__c), &quot;blackberry&quot;)) ||
    (CONTAINS(LOWER(stayclassy__Browser_Info__c), &quot;opera mini&quot;)) ||
    (CONTAINS(LOWER(stayclassy__Browser_Info__c), &quot;opera mobi&quot;)) ||
    (CONTAINS(LOWER(stayclassy__Browser_Info__c), &quot;iemobile&quot;))
  ,&apos;Mobile&apos;,
  &apos;Desktop&apos;)
), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__Discount_Code__c</fullName>
        <description>Name of the discount code applied to an orderv (The code of the promo code applied to the transaction.)</description>
        <inlineHelpText>Name of the discount code applied to an orderv (The code of the promo code applied to the transaction.)</inlineHelpText>
        <label>Promo Code</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stayclassy__Discount_Total__c</fullName>
        <description>The total value the transaction&apos;s total_gross_amount has been adjusted.</description>
        <inlineHelpText>The total value the transaction&apos;s total_gross_amount has been adjusted.</inlineHelpText>
        <label>Adjustment Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Fundraising_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fundraising Page</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities (Fundraiser)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>stayclassy__Fundraising_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fundraising Team</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities (Team)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>stayclassy__Hide_Donation_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, indicates that the amount of a donation will not be displayed on a Classy page</description>
        <label>Hide Donation Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>stayclassy__Hide_Donation_Comment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, hides the donor comment and prevents it from being displayed on Classy pages</description>
        <label>Hide Donation Comment</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>